<resources>
    <string name="app_name">Practica5</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="lista_fragment_label">Lista Tareas</string>
    <string name="tarea_fragment_label">Tarea</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tvCategoria">Categoría</string>
    <string-array name="categoria">
        <item>Reparación</item>
        <item>Instalación</item>
        <item>Mantenimiento</item>
        <item>Comercial</item>
        <item>otros</item>
    </string-array>
    <string name="tvPrioridad">Prioridad</string>
    <string-array name="prioridad">
        <item>Baja</item>
        <item>Media</item>
        <item>Alta</item>
    </string-array>
    <string name="mensaje_categoria">Has seleccionado %1$s como categoría</string>
    <string name="pagado">Pagado</string>
    <string name="estado">Estado de la tarea</string>
    <string name="abierta">Abierta</string>
    <string name="enCurso">En Curso</string>
    <string name="cerrada">Cerrada</string>
    <string name="sinPagar">Sin Pagar</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="horas_trabajadas">Llevo %1$d horas trabajadas</string>
</resources>